flux/production/networking.k8s.io-v1-Ingress-monitoring-kube-prometheus-stack-grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kube-prometheus-stack-grafana
    app.kubernetes.io/instance: kube-prometheus-stack
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.spack.io
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.spack.io
    secretName: tls-grafana-webservice
